# cg-project-2d

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
